# ClammingPy

./: .gitignore  AUTHORS.md  CODE_STYLE_GUIDE.md  README.md  codemeta.json  main.py  make_release.bash  makedoc.py  pyproject.toml
clamming/: README.md  __init__.py  claminfo.py  claminfomd.py  clamming.yuml  clamsclass.py  clamsmodules.py  clamspack.py  clamutils.py  classparser.py  exportoptions.py
docs/: ClamInfo.html  ClamInfoMarkdown.html  ClamUtils.html  ClammingClassParser.html  ClamsClass.html  ClamsModules.html  ClamsPack.html  ExportOptions.html  clamming.html  clamming.md  index.html  tests.html  tests.md  uwsgi.py
docs/Whakerexa-2.1/docs/: layout.html
docs/Whakerexa-2.1/wexa_statics/css/: menu.css  wexa.css
docs/statics/: clamming.css
sample/: makedoc_vehicle.py  vehicle.py
tests/: README.md  coverage.xml  test_claminfo.py  test_clamsmodules.py  test_clamspack.py  test_clamutils.py  test_classparser.py  test_exportoptions.py
