# Tom's Obvious Minimal Language - for ClammingPy library
# https://toml.io/en/
# Allows to create the ClammingPy distribution with:
# python -m build
# ---------------------------------------------------------------------------

[project]
    name = "ClammingPy"
    version = "2.2"
    authors = [
      { name="Brigitte Bigi", email="contact@sppas.org" },
    ]
    description = "Light Python-API Documentation in Markdown and accessible HTML"
    readme = "README.md"
    requires-python = ">=3.9"
    license = {file = "LICENSE"}
    keywords = ["python", "class", "module", "documentation", "doc", "docstring", "markdown", "html", "reST", "epydoc"]
    classifiers = [
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
        "Operating System :: OS Independent",
        "Topic :: Documentation",
        "Topic :: Software Development :: Documentation",
        "Intended Audience :: Developers",
        "Development Status :: 5 - Production/Stable"
    ]
    dependencies = [
        "pygments",
        "markdown2"
]

[project.urls]
    "Homepage" = "https://clamming.sf.net/"

[project.optional-dependencies]
    dev = [
        "pylint ~=2.14.0",
        "toml ~=0.10.2"]
    tests = [
        "coverage ~=7.3.0",
        "python-dotenv ~=1.0.0"]

[build-system]
    requires = ["setuptools", "wheel", "pygments", "markdown2"]
    build-backend = "setuptools.build_meta"

[tool.setuptools]
    packages = ["clamming"]

# -------------------
# Code tests
# -------------------
# Can check this config file with:
# import coverage
# x = coverage.config.HandyConfigParser(False)
# x.read("pyproject.toml")
# launch tests: coverage run -m unittest

[tool.coverage.report]
    fail_under = 5
    exclude_also = [
        "def __repr__",
        "raise AssertionError",
        "raise NotImplementedError",
        "if __name__ == .__main__.:",
        "@(abc\\.)?abstractmethod"]

[tool.coverage.run]
    source_pkgs = ["clamming"]
    command_line = "-m unittest"
    omit = [
        "**/__init__.py"]

[tool.coverage.xml]
    output = "tests/coverage.xml"

# -------------------
# Static code analyser
# --------------------

[tool.pylint]
    # See documentation here: https://pylint.pycqa.org/en/latest/user_guide/messages/index.html
    # Nomenclature: F=Fatal, E=Error, W=Warning, C=Convention, R=Refacto, I=Information
    disable = [
        "C0114", # (missing-module-docstring)
        "C0115", # (missing-class-docstring)
        "C0116", # (missing-function-docstring)
        "C0209", #
        "R0903", # (too-few-public-methods)
        "R0904", # (too-many-public-methods)
        "R0913", # (too-many-arguments)
        "R1716", # (chained-comparison)
        "R1734", # (use-list-literal)
        "R1735", # (use-dict-literal)
        "W0107", # (unnecessary-pass)
        "W0105", # (pointless-string-statement)
        "W0702", # (bare-except)
        "W0718", # (broad-exception-caught)
        "W0719", # (broad-exception-raised)
        "W1401"] # (anomalous-backslash-in-string)

[tool.pylint.basic]
    # Allow shorter and longer variable names than the default.
    argument-rgx = "[a-z_][a-z0-9_]*$"
    attr-rgx = "[a-z_][a-z0-9_]*$"
    variable-rgx = "[a-z_][a-z0-9_]*$"

[tool.pylint.logging]
    # The type of string formatting that logging methods do. `old` means using %
    # formatting, `new` is for `{}` formatting.
    logging-format-style = "new"
    logging-modules = ["logging"]

[tool.pylint.format]
    # Maximum number of characters on a single line.
    max-line-length = 120
    max-module-lines = 1500

[tool.pylint.main]
    # Naming style matching correct class names.
    class-naming-style = "PascalCase"
    # Regular expression matching correct class names. Overrides class-naming-style.
    # If left empty, class names will be checked with the set naming style.
    class-rgx = "[a-zA-Z][a-zA-Z]+"    # default is "[A-Z][a-z]+"

[tool.pylint.design]
    # Maximum number of arguments for function / method.
    max-args = 8   # default is 5
